--- a/Exercicios/Portifolio/index.html
+++ b/Exercicios/Portifolio/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header id="container-header">
+        <a href="##">
+            <img src="img-icons/icon-dev.png" alt="icon-dev">
+        </a>
         <nav id="nav-container">
-            <span class="logo">##</span>
-            <ul class="navlist">
-
+            <ul class="nav-content">
                 <li class="nav-item">
-                    <a href="#" target="_blank" title="Facebook">
-                        <img src="img-icons/images.png" alt="facebook-img">
+                    <a href="#" target="_blank" title="linkedin.jpeg">
+                        <img src="img-icons/linkedin.jpeg" alt="linkedin.jpeg">
                     </a>
                 </li>
 
@@ -27,7 +28,7 @@
             </ul>
         </nav>
     </header>
-
+   <!--FIM HEDAER-->
     <main>
 
     </main>
